deployments/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  labels:
    app: webserver
spec:
  ports:
    - port: 80
      targetPort: 8000 # Change to your application's port
  selector:
    app: webserver
  type: ClusterIP
